[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Rex6961",email = "aon777ar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-adk (>=1.21.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sequential_agents", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]
